syntax = "proto3";

package com.metrocarpool.user;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.metrocarpool.user.proto";
option java_outer_classname = "UserProto";

service UserService {
  rpc DriverSignUpRequest (DriverSignUp) returns (SignUpOrLoginResponse);
  rpc RiderSignUpRequest (RiderSignUp) returns (SignUpOrLoginResponse);
  rpc UserLoginRequest (UserLogin) returns (SignUpOrLoginResponse);
}

enum UserType {
  DRIVER = 0;
  RIDER = 1;
}

message DriverSignUp {
  string username = 1;
  string password = 2;
//  UserType userType = 3;
  int64 licenseId = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message RiderSignUp {
  string username = 1;
  string password = 2;
//  UserType userType = 3;
  google.protobuf.Timestamp createdAt = 3;
}

message UserLogin {
  string username = 1;
  string password = 2;
  UserType userType = 3;
}

message SignUpOrLoginResponse {
  int32 STATUS_CODE = 1;
}